--- a/app/views/jan25-ur-r4/request-edit-winter-workforce-census.html
+++ b/app/views/jan25-ur-r4/request-edit-winter-workforce-census.html
@@ -15,7 +15,7 @@
     <strong class="govuk-tag govuk-tag--pink">
       Pending
     </strong>
-    <a class="govuk-link" href="cancel-request" style="margin-left: 15px;">Cancel request</a>
+    <a class="govuk-link" href="cancel-request-winter-workforce" style="margin-left: 15px;">Cancel request</a>
   </div>
 
     <p>Requested by Amit Basile at 3.20 pm on 6 Jan 2025.</p>
