--- a/app/views/jan25-ur-r4/request-new-dfe-connect-page.html
+++ b/app/views/jan25-ur-r4/request-new-dfe-connect-page.html
@@ -15,7 +15,7 @@
     <strong class="govuk-tag govuk-tag--pink">
       Pending
     </strong>
-    <a class="govuk-link" href="cancel-request" style="margin-left: 15px;">Cancel request</a>
+    <a class="govuk-link" href="cancel-request-dfe-connect-page" style="margin-left: 15px;">Cancel request</a>
   </div>
 
     <p>Requested by Lucy O'Connor at 10.15 am on 6 Jan 2025.</p>
