--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,10 +12,12 @@
     </h1>
 
     <h2 class="govuk-heading-m">Current version</h2>
-    <p>UR round 3 - add a new task</p>
-    <p><a href="nov24-ur-r3/homepage">View prototype</a></p>
+    <p>UR round 4 - requests</p>
+    <p><a href="jan25-ur-r4/homepage">View prototype</a></p>
 
     <h2 class="govuk-heading-m">Previous versions</h2>
+    <p>UR round 3 - add a new task</p>
+    <p><a href="nov24-ur-r3/homepage">View prototype</a></p>
     <p>UR round 2</p>
     <p><a href="oct24-ur-r2/homepage">View prototype</a></p>
 
