--- a/app/views/jan25-ur-r4/cancel-request-school-census.html
+++ b/app/views/jan25-ur-r4/cancel-request-school-census.html
@@ -8,6 +8,8 @@
 <div class="govuk-grid-row"> 
   <div class="govuk-grid-column-full">  
 
+    <form action="requests-cancelled-school-census" method="post">
+
     <h1 class="govuk-heading-l">Are you sure you want to cancel the request?</h1>
 
     <div class="govuk-inset-text">
@@ -15,15 +17,13 @@
     </div>
 
     <div class="govuk-button-group">
-      {{ govukButton({
-        text: "Confirm cancel request",
-        href: "requests-cancelled"
-      }) }}
-    
+      <button type="submit" class="govuk-button" data-module="govuk-button" name="schoolCensus" value="true">
+        Confirm cancel request
+      </button>
       <a class="govuk-link" href="requests">Cancel</a>
     </div>
 
-
+  </form>
 {% endblock %}
 
 
