--- a/app/views/jan25-ur-r4/requests-cancelled-new-dfe-connect-page.html
+++ b/app/views/jan25-ur-r4/requests-cancelled-new-dfe-connect-page.html
@@ -7,11 +7,9 @@
 <div class="govuk-grid-row"> 
   <div class="govuk-grid-column-full">  
 
-    {% if data['new-dfe-connect-page'] %}
-
     {% set html %}
       <h3 class="govuk-notification-banner__heading" style="max-width: 100%;">
-        You’ve removed the request for Amend your autumn school census data, if needed.
+        You've cancelled the request for New DfE Connect page.
       </h3>
     {% endset %}
 
@@ -19,6 +17,7 @@
       html: html,
       type: "success"
     }) }}
+
 
     <h1 class="govuk-heading-l">Your requests</h1>
 
@@ -44,23 +43,6 @@
         </tr>
       </tbody>
     </table>
-
-    {% endif %}
-
-    {% set html %}
-      <h3 class="govuk-notification-banner__heading" style="max-width: 100%;">
-        You’ve removed the request for Amend your autumn school census data, if needed.
-      </h3>
-    {% endset %}
-
-    {{ govukNotificationBanner({
-      html: html,
-      type: "success"
-    }) }}
-
-    <h1 class="govuk-heading-l">Your requests</h1>
-
-    <p>Check the status of your requests.</p>
 
     <h2 class="govuk-heading-m">Returned requests</h2>
 
@@ -96,6 +78,22 @@
           {
             html: '<strong class="govuk-tag govuk-tag--green">
               Approved
+            </strong>'
+          }
+        ],
+        [
+          {
+            html: '<a href="request-returned-review">Amend your autumn school census data, if needed</a>'
+          },
+          {
+            text: "New task"
+          },
+          {
+            text: "KK484401"
+          },
+          {
+            html: '<strong class="govuk-tag govuk-tag--red">
+              Returned
             </strong>'
           }
         ],
