--- a/app/views/jan25-ur-r4/homepage.html
+++ b/app/views/jan25-ur-r4/homepage.html
@@ -155,7 +155,7 @@
           text: "Title"
         },
         {
-          text: "Type of request"
+          text: "Type"
         },
         {
           text: "Requested by"
