--- a/app/views/jan25-ur-r4/request-returned-review.html
+++ b/app/views/jan25-ur-r4/request-returned-review.html
@@ -22,8 +22,8 @@
 
     <h2 class="govuk-heading-m">Review outcome</h2>
     <p>The request for a new task, Amend your autumn school census data, if needed, was returned on 22 November 2024.</p>
-    <p>Reason for returned request: [reason selected here].</p>
-    <p>Additional comments about your request: [comments go here].</p>
+    <p>Reason for returned request: Politically sensitive. </p>
+    <p>Additional comments about your request: Your description mentions a service which is no longer supported by the government. You must remove the mention and create a new task and submit for review. </p>
 
     <h2 class="govuk-heading-m">What happens next</h2>
     <p>Our DfE content team will email you regarding your request to resolve any outstanding issues.</p>
