--- a/app/views/jan25-ur-r4/requests.html
+++ b/app/views/jan25-ur-r4/requests.html
@@ -35,19 +35,19 @@
           <td class="govuk-table__cell"><a href="request-edit-winter-workforce-census">Complete your winter workforce census return</a></th>
           <td class="govuk-table__cell">Edit task</td>
           <td class="govuk-table__cell">FB164920</td>
-          <td class="govuk-table__cell">9 Jan 2025</td>
+          <td class="govuk-table__cell">{{ "today" | govukDate("truncate") }}</td>
         </tr>
         <tr class="govuk-table__row">
           <td class="govuk-table__cell"><a href="request-new-dfe-connect-page">Workforce census	</a></th>
           <td class="govuk-table__cell">New page</td>
           <td class="govuk-table__cell">PG184027</td>
-          <td class="govuk-table__cell">9 Jan 2025</td>
+          <td class="govuk-table__cell">{{ "today" | govukDate("truncate") }}</td>
         </tr>
         <tr class="govuk-table__row">
           <td class="govuk-table__cell"><a href="request-new-task-school-census">Check the school census guidance for any changes</a></th>
           <td class="govuk-table__cell">New task</td>
           <td class="govuk-table__cell">BC276498</td>
-          <td class="govuk-table__cell">8 Jan 2025</td>
+          <td class="govuk-table__cell">{{ "today" | govukDate("truncate") }}</td>
         </tr>
       </tbody>
     </table>
