Updated what happens next text

--- a/app/views/jan25-ur-r4/request-edit-winter-workforce-census.html
+++ b/app/views/jan25-ur-r4/request-edit-winter-workforce-census.html
@@ -146,7 +146,7 @@
 
 
     <h2 class="govuk-heading-m">What happens next</h2>
-    <p>We’ll email you to confirm your page is live on DfE Connect or to ask for more information.</p>
+    <p>We’ll email you to confirm your task is live on DfE Connect or to ask for more information.</p>
 
 
 {% endblock %}
