--- a/app/views/jan25-ur-r4/request-edit-winter-workforce-census.html
+++ b/app/views/jan25-ur-r4/request-edit-winter-workforce-census.html
@@ -18,7 +18,7 @@
     <a class="govuk-link" href="cancel-request-winter-workforce" style="margin-left: 15px;">Cancel request</a>
   </div>
 
-    <p>Requested by Amit Basile at 3.20 pm on 18 Dec 2024.</p>
+    <p>Requested by Amit Basile at 3.20 pm on {{ "today" | govukDate("truncate") }}.</p>
 
     <h2 class="govuk-heading-m">Edited</h2>
 
