--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,15 +11,19 @@
       Manage your DfE Connect data prototype
     </h1>
 
-    <h2 class="govuk-heading-m">Current version</h2>
+    <h2 class="govuk-heading-m">Current UR version</h2>
     <p>UR round 4 - requests</p>
     <p><a href="jan25-ur-r4/homepage">View prototype</a></p>
 
-    <h2 class="govuk-heading-m">Previous versions</h2>
+    <h2 class="govuk-heading-m">Previous UR versions</h2>
     <p>UR round 3 - add a new task</p>
     <p><a href="nov24-ur-r3/homepage">View prototype</a></p>
     <p>UR round 2</p>
     <p><a href="oct24-ur-r2/homepage">View prototype</a></p>
+
+    <h2 class="govuk-heading-m">Other features</h2>
+    <p>Taxonomy manager</p>
+    <p><a href="taxonomy-manager/homepage">View prototype</a></p>
 
   </div>
 </div>
